--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,6 @@ server {
   listen 80;
 
   location / {
-    return 301 $scheme://{DESTINATION}$request_uri;
+    return 301 http://{DESTINATION};
   }
 }
